--- a/gaze_project/gazeBehavior/ver_2/templates/home.html
+++ b/gaze_project/gazeBehavior/ver_2/templates/home.html
@@ -10,28 +10,29 @@
 
 <body>
   <div style="width:2500px; height:1310px; border:1px solid black; background-color:#fff">
-    <div id="data_explorer"style="width:400px; height:1200px; border:1px solid black; float: left; background-color:#fff">
-      <div id="data_columns" style="width:300px; height:150px; border:1px solid black;">
-        <span>columns</span>
-      </div>
-      <div id='data_event' style="width:300px; height:150px; border:1px solid black;">
+    <div id="data_explorer" style="width:400px; height:1300px; border:1px solid black; float: left; background-color:#fff">
+      <div id='data_event' style="width:350px; height:100px; border:1px solid black;">
         <span>event feature</span>
       </div>
-      <div id='data_measurement' style="width:300px; height:150px; border:1px solid black;">
+      <div id='data_measurement' style="width:350px; height:50px; border:1px solid black;">
         <span>measure feature</span>
       </div>
-      <div id='aoi_selector' style="width:300px; height:450px; border:1px solid black;">
-        <span>AOI selector</span>
+      <div id='aoi_selector' style="width:350px; height:400px; border:1px solid black;">
+      </div>
+      <div id='aoi_list' style="width:350px; height:180px; border:1px solid black;">
+      </div>
+      <div id='feature_overview' style="width:350px; height:500px; border:1px solid black;">
+        <span>Features overview</span>
       </div>
     </div>
-    <div style="width:400px; height:1200px; border:1px solid black; float: left; background-color:#fff">
+    <div id="attention_explorer" style="width:400px; height:1300px; border:1px solid black; float: left; background-color:#fff">
     </div>
-    <div style="width:400px; height:1200px; border:1px solid black; float: left; background-color:#fff">
+    <div style="width:400px; height:1300px; border:1px solid black; float: left; background-color:#fff">
     </div>
-    <div style="width:900px; height:1200px; border:1px solid black; float: left; background-color:#fff">
-      <div style="width:400px; height:1200px; border:0.5px solid black; float: left; background-color:#fff">
+    <div style="width:900px; height:1300px; border:1px solid black; float: left; background-color:#fff">
+      <div style="width:400px; height:1300px; border:0.5px solid black; float: left; background-color:#fff">
       </div>
-      <div style="width:400px; height:1200px; border:0.5px solid black; float: right; background-color:#fff">
+      <div style="width:400px; height:1300px; border:0.5px solid black; float: right; background-color:#fff">
       </div>
     </div>
   </div>
@@ -45,6 +46,6 @@
   let dataColumns = ["no", "x", "y"];
   let measurement  = ["duration", "pupil diameter"];
   let attention = ["intensity", "color", "orientation"];
-  // x, y, class, 
+  // x, y, class,
 
 </script>
