--- a/python-server/flask/templates/index.html
+++ b/python-server/flask/templates/index.html
@@ -1,1 +1,11 @@
-
+<!doctype html>
+<html>
+  <head>
+  </head>
+  <body>
+    {% if True %}
+    {{image_file}}
+    <img src="{{ url_for('static', filename=image_file) }}">
+    {% endif %}
+  </body>
+</html>
