--- a/gaze_project/gazeBehavior/ver_5/templates/src/index.scss
+++ b/gaze_project/gazeBehavior/ver_5/templates/src/index.scss
@@ -12,13 +12,11 @@ ul {
 }
 
 .app {
-  display: grid;
-  grid-template-columns: 50px 400px auto;
-  grid-template-rows: auto 50px;
-  height: 100%;
-  color: #555;
+  width:2200px;
+  height:1200px;
+  border: 1px black solid;
+  box-sizing: border-box;
 }
-
 .menu {
   grid-row: span 2;
   background-color: #ddd;
@@ -84,19 +82,88 @@ ul {
   }
 }
 
+#my_dataviz{
+  position: relative;
+}
 .content {
+  box-sizing: border-box;
   padding: 20px;
-
+  
+  display: flex;
+  flex-direction: row;
+  align-items: flex-start;
+  justify-content: flex-start;
+  width:100%;
+  height: 1200px;
+  color: #555;
+  
+  .inputBoxWrap{
+    width:400px;
+    height: 100%;
+    box-sizing: border-box;
+    border: 1px black solid;
+  }
+  .dataAbstractWrap{
+    width:450px;
+    height: 100%;
+    box-sizing: border-box;
+    border: 1px black solid;
+  }
+  .dataVisualizationWrap{
+    width:900px;
+    height: 100%;
+    box-sizing: border-box;
+    border: 1px black solid;
+  }
+  .stimulusDivsWrap{
+    display: flex;
+    flex-direction: row;
+    align-items: flex-start;
+    justify-content: flex-start;
+    box-sizing: border-box;
+    border: 1px black solid;
+    .stimulusClass{
+      width: 400px;
+      height: 340px;
+      box-sizing: border-box;
+      border: 1px black solid;
+    }
+    .patchClass{
+      width: 235px;
+      height: 340px;
+      box-sizing: border-box;
+      border: 1px black solid;
+    }
+    .functionClass{
+      width: 265px;
+      height: 340px;
+      box-sizing: border-box;
+      border: 1px black solid;
+    }
+  }
+  .dataResultWrap{
+    width:450px;
+    height: 100%;
+    box-sizing: border-box;
+    border: 1px black solid;
+  }
   .page-header {
     display: grid;
-    height: 100px;
-    margin: -20px -20px 5px -20px;
+    height: 60px;
+    /*margin: -20px -20px 5px -20px;*/
     padding-left: 15px;
     align-content: center;
     background-color: #f5f5f5;
   }
+  .section-header {
+    display: grid;
+    height: 30px;
+    padding-left: 10px;
+    align-content: center;
+    background-color: #f5f5f5;
+  }
   .page-section {
-    margin: 5px -10px;
+    margin: 0px 0px;
   }
   .button-wrapper {
     text-align: right;
@@ -111,25 +178,6 @@ ul {
     &:hover {
       background-color: black;
     }
-  }
-  .vis-image {
-    position: relative;
-    display: inline-block;
-    margin: 0 auto;
-
-    .vis-layer {
-      &.polygon-layer {
-        position: absolute;
-        top: 0;
-        left: 0;
-        z-index: 1;
-      }
-    }
-  }
-  .stimulus-wrapper {
-    display: inline-block;
-    width: 300px;
-    margin: 10px;
   }
 }
 
