--- a/gaze_project/gazeBehavior/ver_5/templates/src/index.scss
+++ b/gaze_project/gazeBehavior/ver_5/templates/src/index.scss
@@ -14,80 +14,88 @@ ul {
 .app {
   width:2200px;
   height:1200px;
-  border: 1px black solid;
+  // border: 1px black solid;
   box-sizing: border-box;
 }
-.menu {
-  grid-row: span 2;
-  background-color: #ddd;
+// .menu {
+//   grid-row: span 2;
+//   background-color: #ddd;
 
-  .menu-list {
-    margin: 10px 0;
-    padding: 0;
-    list-style: none;
+//   .menu-list {
+//     margin: 10px 0;
+//     padding: 0;
+//     list-style: none;
 
-    > .menu-item-wrapper {
-      .menu-item {
-        position: relative;
+//     > .menu-item-wrapper {
+//       .menu-item {
+//         position: relative;
 
-        &:hover {
-          .inner-menu {
-            display: block;
-          }
-        }
-        .inner-menu {
-          position: absolute;
-          display: none;
-          top: 0;
-          left: 50px;
-          width: 200px;
-          padding: 0;
-          background-color: #aaa;
-          border: 2px solid #333;
-          list-style: none;
+//         &:hover {
+//           .inner-menu {
+//             display: block;
+//           }
+//         }
+//         .inner-menu {
+//           position: absolute;
+//           display: none;
+//           top: 0;
+//           left: 50px;
+//           width: 200px;
+//           padding: 0;
+//           background-color: #aaa;
+//           border: 2px solid #333;
+//           list-style: none;
           
-          > li {
-            padding: 5px;
+//           > li {
+//             padding: 5px;
 
-            .depth-1 {
-              padding: 3px 5px;
-              color: white;
-              background-color: #3333aa;
-              border: 1px solid #5555cc;
-            }
-          }
-        }
-        .menu-button {
-          display: block;
-          width: 40px;
-          height: 40px;
-          line-height: 40px;
-          margin: 2px 0 2px 10px;
-          font-weight: bold;
-          font-size: 1.2em;
-          text-align: center;
-          text-decoration: none;
-          color: #777;
-          background-color: #eee;
-          border: none;
-          cursor: pointer;
+//             .depth-1 {
+//               padding: 3px 5px;
+//               color: white;
+//               background-color: #3333aa;
+//               border: 1px solid #5555cc;
+//             }
+//           }
+//         }
+//         .menu-button {
+//           display: block;
+//           width: 40px;
+//           height: 40px;
+//           line-height: 40px;
+//           margin: 2px 0 2px 10px;
+//           font-weight: bold;
+//           font-size: 1.2em;
+//           text-align: center;
+//           text-decoration: none;
+//           color: #777;
+//           background-color: #eee;
+//           border: none;
+//           cursor: pointer;
 
-          &.active {
-            color: #333;
-            background-color: white;
-          }
-        }
-      }
-    }
-  }
-}
+//           &.active {
+//             color: #333;
+//             background-color: white;
+//           }
+//         }
+//       }
+//     }
+//   }
+// }
 
 #my_dataviz{
   position: relative;
 }
 .content {
   box-sizing: border-box;
-  padding: 20px;
+  // padding: 20px;
+  padding-left: 2px;
+  padding-right: 3px;
+  padding-top: 2px;
+  padding-bottom: 3px;
+  background-color: #3a3a3a;
+
+  margin-left: 10px;
+  margin-top: 10px;
   
   display: flex;
   flex-direction: row;
@@ -98,22 +106,31 @@ ul {
   color: #555;
   
   .inputBoxWrap{
-    width:400px;
+    width: 400px;
     height: 100%;
+    margin-right: 2px;
     box-sizing: border-box;
-    border: 1px black solid;
+    // border: 1px #BFBFBF solid;
+    // border: 1px white solid;
+    background-color: white;
   }
   .dataAbstractWrap{
-    width:450px;
+    width: 450px;
     height: 100%;
+    margin-right: 2px;
     box-sizing: border-box;
-    border: 1px black solid;
+    // border: 1px #BFBFBF solid;
+    // border: 1px white solid;
+    background-color: white;
   }
   .dataVisualizationWrap{
-    width:900px;
+    width: 900px;
     height: 100%;
+    margin-right: 2px;
     box-sizing: border-box;
-    border: 1px black solid;
+    // border: 1px #BFBFBF solid;
+    // border: 1px white solid;
+    background-color: white;
   }
   .stimulusDivsWrap{
     display: flex;
@@ -121,46 +138,60 @@ ul {
     align-items: flex-start;
     justify-content: flex-start;
     box-sizing: border-box;
-    border: 1px black solid;
+    // border: 1px #BFBFBF solid;
+    background-color: white;
+    
     .stimulusClass{
       width: 400px;
       height: 340px;
       box-sizing: border-box;
-      border: 1px black solid;
+      // border: 1px #BFBFBF solid;
     }
     .patchClass{
       width: 235px;
       height: 340px;
       box-sizing: border-box;
-      border: 1px black solid;
+      // border: 1px #BFBFBF solid;
     }
     .functionClass{
       width: 265px;
       height: 340px;
       box-sizing: border-box;
-      border: 1px black solid;
+      // border: 1px #BFBFBF solid;
     }
   }
   .dataResultWrap{
     width:450px;
     height: 100%;
     box-sizing: border-box;
-    border: 1px black solid;
+    // border: 1px #BFBFBF solid;
+    // border: 1px white solid;
+    background-color: white;
   }
   .page-header {
-    display: grid;
+    display: flex;
+    flex-direction: row;
     height: 60px;
-    /*margin: -20px -20px 5px -20px;*/
+    margin-bottom: 15px;
     padding-left: 15px;
-    align-content: center;
-    background-color: #f5f5f5;
+    /*margin: -20px -20px 5px -20px;*/
+    align-items: center;
+    // background-color: #f5f5f5;
+    // background-color: #3a3a3a;
+    background:linear-gradient(-45deg, transparent 15px, #3a3a3a 0);
+    color: white;
   }
   .section-header {
+    // margin-left: 1px;
+    margin-right: 1px;
+    // margin-top: 1px;
     display: grid;
     height: 30px;
     padding-left: 10px;
     align-content: center;
-    background-color: #f5f5f5;
+    // background-color: #3a3a3a;
+    background:linear-gradient(-45deg, transparent 20px, #525252 0);
+    color: white;
   }
   .page-section {
     margin: 0px 0px;
@@ -216,4 +247,13 @@ ul {
     text-decoration: none;
     color: inherit;
   }
+}
+
+#logo{
+  width: 28px;
+  height: 20px;
+  margin-right: 15px;
+  background-image: url("./image/logo_gray.png");
+  background-repeat: no-repeat;
+  background-size: 100% 100%;
 }
