--- a/gaze_project/gazeBehavior/ver_5/templates/src/index.scss
+++ b/gaze_project/gazeBehavior/ver_5/templates/src/index.scss
@@ -1,7 +1,8 @@
 html, body {
   height: 100%;
   margin: 0;
-  font-family: 'Noto Sans Korean', Arial, Helvetica;
+  // font-family: 'Noto Sans Korean', Arial, Helvetica;
+  font-family: 'Roboto', sans-serif;
 }
 
 h1, h2, h3, p, ul {
@@ -12,75 +13,11 @@ ul {
 }
 
 .app {
-  width:2200px;
+  width:2200;
   height:1200px;
   // border: 1px black solid;
   box-sizing: border-box;
 }
-// .menu {
-//   grid-row: span 2;
-//   background-color: #ddd;
-
-//   .menu-list {
-//     margin: 10px 0;
-//     padding: 0;
-//     list-style: none;
-
-//     > .menu-item-wrapper {
-//       .menu-item {
-//         position: relative;
-
-//         &:hover {
-//           .inner-menu {
-//             display: block;
-//           }
-//         }
-//         .inner-menu {
-//           position: absolute;
-//           display: none;
-//           top: 0;
-//           left: 50px;
-//           width: 200px;
-//           padding: 0;
-//           background-color: #aaa;
-//           border: 2px solid #333;
-//           list-style: none;
-          
-//           > li {
-//             padding: 5px;
-
-//             .depth-1 {
-//               padding: 3px 5px;
-//               color: white;
-//               background-color: #3333aa;
-//               border: 1px solid #5555cc;
-//             }
-//           }
-//         }
-//         .menu-button {
-//           display: block;
-//           width: 40px;
-//           height: 40px;
-//           line-height: 40px;
-//           margin: 2px 0 2px 10px;
-//           font-weight: bold;
-//           font-size: 1.2em;
-//           text-align: center;
-//           text-decoration: none;
-//           color: #777;
-//           background-color: #eee;
-//           border: none;
-//           cursor: pointer;
-
-//           &.active {
-//             color: #333;
-//             background-color: white;
-//           }
-//         }
-//       }
-//     }
-//   }
-// }
 
 #my_dataviz{
   position: relative;
@@ -132,6 +69,38 @@ ul {
     // border: 1px white solid;
     background-color: white;
   }
+  .visControlClass{
+    display: flex;
+    flex-direction: row;
+    align-items: flex-start;
+    justify-content: flex-start;
+    box-sizing: border-box;
+    background-color: white;
+    .visSelect{
+      width: 300px;
+      height: 50px;
+      box-sizing: border-box;
+      // border: 1px #BFBFBF solid;
+    }
+    .nodeSelect{
+      width: 300px;
+      height: 50px;
+      box-sizing: border-box;
+      // border: 1px #BFBFBF solid;
+    }
+    .nodeSizeSpinner{
+      width: 100px;
+      height: 50px;
+      box-sizing: border-box;
+    }
+    .featureSelect{
+      width: 200px;
+      height: 50px;
+      box-sizing: border-box;
+      // border: 1px #BFBFBF solid;
+    }
+  }
+  
   .stimulusDivsWrap{
     display: flex;
     flex-direction: row;
@@ -168,6 +137,16 @@ ul {
     // border: 1px white solid;
     background-color: white;
   }
+  
+  .visWarp{
+    width:970px;
+    height: 100%;
+    box-sizing: border-box;
+    // border: 1px #BFBFBF solid;
+    // border: 1px white solid;
+    background-color: white;
+  }
+
   .page-header {
     display: flex;
     flex-direction: row;
