--- a/gaze_project/gazeBehavior/ver_6/templates/public/index.html
+++ b/gaze_project/gazeBehavior/ver_6/templates/public/index.html
@@ -1,1 +1,15 @@
-s
+<!DOCTYPE html>
+<html lang='en'>
+<head>
+  <title></title>
+  <meta charset='utf-8'>
+  <meta name='viewport' content='width=device-width, initial-scale=1'>
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+  <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
+  <script src="https://d3js.org/d3.v4.js"></script>
+  
+</head>
+<body>
+  <div id='app' class='app'></div>
+</body>
+</html>
