--- a/gaze_project/gazeBehavior/ver_6/templates/src/index.scss
+++ b/gaze_project/gazeBehavior/ver_6/templates/src/index.scss
@@ -129,7 +129,7 @@ ul {
     .colorEncodeLabelDescriptionBox{
       margin: 5px;
       width: 380px;
-      height: 90px;
+      height: 40px;
       box-sizing: border-box;
       border: 1px #BFBFBF solid;
       background-color: gray;
@@ -144,9 +144,9 @@ ul {
     }
     .saliencyView_linechart{
       width: 390px;
-      height: 300px;
+      height: 200px;
       box-sizing: border-box;
-      background-color: skyblue;
+      background-color: white;
     }
   }
 
