--- a/gaze_project/gazeBehavior/ver_6/templates/src/index.scss
+++ b/gaze_project/gazeBehavior/ver_6/templates/src/index.scss
@@ -36,8 +36,8 @@ ul {
   
   display: flex;
   flex-direction: row;
-  align-items: flex-start;
-  justify-content: flex-start;
+  // align-items: flex-start;
+  // justify-content: flex-start;
   width:100%;
   height: 1200px;
   color: #555;
@@ -60,6 +60,27 @@ ul {
     // border: 1px white solid;
     background-color: white;
   }
+  .colorSelectBox{
+    display: flex;
+    flex-direction: row;
+    box-sizing: border-box;
+    
+    width: 400px;
+    height: 30px;
+    box-sizing: border-box;
+    // border: 1px #BFBFBF solid;
+    background-color: white;
+  }
+  .colorBox{
+    width: 50px;
+    height: 27px;
+    align-items: center;
+    justify-content: center;
+    box-sizing: border-box;
+    // border: 1px #BFBFBF solid;
+    background-color: white;
+  }
+
   .dataVisualizationWrap{
     width: 1200px;
     height: 100%;
@@ -69,7 +90,7 @@ ul {
     // border: 1px white solid;
     background-color: white;
   }
-  .visualizationViewWrap{
+  .scanpathVisualizationViewWrap{
     display: flex;
     flex-direction: row;
     align-items: flex-start;
@@ -99,17 +120,17 @@ ul {
     align-items: flex-start;
     justify-content: flex-start;
     box-sizing: border-box;
-    // border: 1px #BFBFBF solid;
+    border: 1px #BFBFBF solid;
     background-color: white;
     .patchView{
       width: 900px;
-      height: 535px;
+      height: 600px;
       box-sizing: border-box;
       background-color: wihte;
     }
     .patchViewControl{
       width: 290px;
-      height: 525px;
+      height: 595px;
       margin-top: 5px;
       margin-left: 5px;
       margin-right: 5px;
@@ -117,6 +138,13 @@ ul {
       background-color: wihte;
       border: 1px #BFBFBF solid;
     }
+  }
+  .visualizationDiv{
+    width: 1200px;
+    height: 530px;
+    box-sizing: border-box;
+    background-color: white;
+    border: 1px #BFBFBF solid;
   }
   
 
