--- a/gaze_project/gazeBehavior/ver_6/templates/public/index.html
+++ b/gaze_project/gazeBehavior/ver_6/templates/public/index.html
@@ -7,6 +7,15 @@
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
   <script src="https://d3js.org/d3.v4.js"></script>
+  <script>
+    d3v4 = d3;
+    window.d3 = null;
+  </script>
+  <script src="https://d3js.org/d3.v3.js"></script>
+  <script>
+    d3v3 = d3;
+    window.d3 = null;
+  </script>
   
 </head>
 <body>
