--- a/gaze_project/gazeBehavior/ver_6/templates/src/index.scss
+++ b/gaze_project/gazeBehavior/ver_6/templates/src/index.scss
@@ -184,7 +184,112 @@ ul {
       // border: 1px #BFBFBF solid;
     }
   }
-  
+  .analysisViewWrap{
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: flex-start;
+    box-sizing: border-box;
+    // border: 1px #BFBFBF solid;
+    background-color: white;
+    .lrWarpDiv{
+      display: flex;
+      flex-direction: row;
+      align-items: flex-start;
+      justify-content: flex-start;
+      box-sizing: border-box;
+      box-sizing: border-box;
+      .leftDiv{
+        width: 900px;
+        height: 570px;
+        display: flex;
+        flex-direction: column;
+        align-items: flex-start;
+        justify-content: flex-start;
+        box-sizing: border-box;
+        background-color: white;
+        // border: 1px #BFBFBF solid;
+        .halfHeightDiv{
+          display: flex;
+          flex-direction: row;
+          align-items: flex-start;
+          justify-content: flex-start;
+          width: 900px;
+          // height: 50%;
+          height: 285px;
+          box-sizing: border-box;
+          background-color: white;
+          .mapBoxWrap{
+            display: flex;
+            flex-direction: column;
+            align-items: flex-start;
+            justify-content: flex-start;
+            width: 300px;
+            // height: 50%;
+            height: 285px;
+            box-sizing: border-box;
+            background-color: white;
+            .titleDiv{
+              display: flex;
+              align-items: center;
+              justify-content: center;
+              width: 300px;
+              height: 25px;
+              box-sizing: border-box;
+              background-color: white;
+            }
+            .mapDiv{
+              display: flex;
+              align-items: center;
+              justify-content: center;
+              width: 300px;
+              height: 260px;
+              box-sizing: border-box;
+              background-color: white;
+            }
+          }
+          .starChartWrap{
+            display: flex;
+            flex-direction: column;
+            align-items: flex-start;
+            justify-content: flex-start;
+            width: 300px;
+            // height: 50%;
+            height: 285px;
+            box-sizing: border-box;
+            background-color: white;
+            .titleDiv{
+              display: flex;
+              align-items: center;
+              justify-content: center;
+              width: 300px;
+              height: 25px;
+              box-sizing: border-box;
+              background-color: white;
+            }
+            .chartDiv{
+              display: flex;
+              align-items: center;
+              justify-content: center;
+              width: 300px;
+              height: 260px;
+              box-sizing: border-box;
+              background-color: white;
+            }
+          }
+        }
+        
+      }
+      .rightDiv{
+        width: 300px;
+        height: 570px;
+        box-sizing: border-box;
+        background-color: white;
+        // border: 1px #BFBFBF solid;
+      }
+    }
+    
+  }
   
 
   .evaluationViewWrap{
@@ -215,6 +320,7 @@ ul {
     margin-right: 1px;
     // margin-top: 1px;
     display: grid;
+    width: 100%;
     height: 30px;
     padding-left: 10px;
     align-content: center;
