--- a/gaze_project/gazeBehavior/ver_6/templates/src/index.scss
+++ b/gaze_project/gazeBehavior/ver_6/templates/src/index.scss
@@ -298,6 +298,12 @@ ul {
     box-sizing: border-box;
     // border: 1px #BFBFBF solid;
     background-color: white;
+    .evaluationScoreDiv{
+      width: 390px;
+      height: 150px;
+      box-sizing: border-box;
+      background-color: white;
+    }
   }
 
   
