--- a/decision reasoning/profiling report/templates/index.html
+++ b/decision reasoning/profiling report/templates/index.html
@@ -1,88 +1,44 @@
+{% with messages = get_flashed_messages() %}
+  {% if messages %}
+  <script>
+    alert("{{messages[-1]}}")
+  </script>
+  {% endif %}
+{% endwith %}
+
 <!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <style>
-      .axis path,
-      .axis line {
-        fill: none;
-        stroke: #000;
-        shape-rendering: crispEdges;
-      }
-      .point {
-        fill: steelblue;
-        stroke: #000;
-      }  
-      .node {
-        cursor: pointer;
-      }
-      .node circle {
-        fill: #fff;
-        stroke: steelblue;
-        stroke-width: 3px;
-      }
-      .node text {
-        font: 12px sans-serif;
-      }
-      .link {
-        fill: none;
-        stroke: #ccc;
-        stroke-width: 2px;
-      }
+    <link rel="stylesheet" href="static/css/main.css">
 
-      #wrap {
-        display: flex;
-        height: 100vh;
-      }
-      #left {
-        width: 25%;
-        padding-right: 20px;
-      }
-      #bottom_div {
-        height: 200px;
-      }
-      #right {
-        padding-left: 20px;
-        width: 75%;
-      }
-      #input_query {
-        width: 100%;
-        margin-bottom: 20px;
-      }
-      .input_form {
-        display: flex;
-        justify-content: space-between;
-      }
-      .input_box {
-        width: 100%;
-      }
-      .input_button {
-        margin: 0 10px;
-      }
-    </style>
+    <script src="https://d3js.org/d3.v3.js"></script>
+      <script>
+        d3v3 = d3;
+        window.d3 = null;
+      </script>
+    <script src="https://d3js.org/d3.v4.js"></script>
+    <script>
+      d3v4 = d3;
+      window.d3 = null;
+    </script>
+    <script src="https://cdn.jsdelivr.net/npm/vega@5" charset="utf-8"></script>
+    <script src="https://cdn.jsdelivr.net/npm/vega-lite@4" charset="utf-8"></script>
+    <script src="https://cdn.jsdelivr.net/npm/vega-embed@6" charset="utf-8"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
   </head>
-  <!-- load the d3.js library -->   
-
-  <script src="https://d3js.org/d3.v3.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/vega@5" charset="utf-8"></script>
-  <script src="https://cdn.jsdelivr.net/npm/vega-lite@4" charset="utf-8"></script>
-  <script src="https://cdn.jsdelivr.net/npm/vega-embed@6" charset="utf-8"></script>
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+  <header>Profiling Report</header>
   <body>
     <div id="wrap">
       <div id="left">
+        <div id="tree_title">Provenance Flow</div>
         <div id="tree"></div>
-        <div id="bottom_div">
-          {% if True %}
-          <img src="{{ url_for('static', filename=fig) }}" height = 200px>
-          {% endif %}    
-        </div>
       </div>
 
       <div id="right">
         <div id="input_query">
           <form method="post" action="/input_query" class="input_form">
-            <input type="text" name="input_query" class="input_box">
+            <input type="text" name="input_query" class="input_box" placeholder="type your query here...">
             <input type="submit" value="submit" class="input_button">
           </form>
         </div>
@@ -90,6 +46,7 @@
       </div>
     </div>
   </body>
+  <footer>Sejong University</footer>
 
   <!-- ************** Generate the tree diagram ************** -->
   <script>
@@ -97,35 +54,41 @@
       {
         "file": "root", 
         "name": "50",
+        "state": "init",
         "parent": "null",
         "children": [
           {
             "file": "1.1",
             "name": "26",
+            "state": "true",
             "children": [
-              {"file": "2.1", "name": "12"},
+              {"file": "2.1", "name": "12", "state": "false"},
               {
                 "file": "2.2",
                 "name": "12",
+                "state": "current",
                 "children": [
-                  {"file": "3.1", "name": "0"},
-                  {"file": "3.2", "name": "0"},
-                  {"file": "3.3", "name": "0"}  
+                  {"file": "3.1", "name": "0", "state": "recommend_list"},
+                  {"file": "3.2", "name": "0", "state": "recommend_list"},
+                  {"file": "3.3", "name": "0", "state": "recommend"}  
                 ]
               },
               {
                 "file": "2.3",
-                "name": "12"
+                "name": "12",
+                "state": "false"
               }
             ]
           },
           {
             "file": "1.2",
             "name": "38",
+            "state": "false"
           },
           {
             "file": "1.3",
             "name": "38",
+            "state": "false"
           }      
         ]
       }
@@ -139,13 +102,13 @@
       duration = 750,
       root;
 
-    var tree = d3.layout.tree()
+    var tree = d3v3.layout.tree()
       .size([height, width]);
 
-    var diagonal = d3.svg.diagonal()
+    var diagonal = d3v3.svg.diagonal()
       .projection(function(d) { return [d.x, d.y]; });
 
-    var svg = d3.select("#tree").append("svg")
+    var svg = d3v3.select("#tree").append("svg")
       .attr("width", width + margin.right + margin.left)
       .attr("height", height + margin.top + margin.bottom)
       .append("g")
@@ -253,26 +216,67 @@
         d._children = null;
       }
       update(d);
-      node_overview(d);
+      if(d.state == 'current'){
+        current_node(d);
+      }
+      if(d.state == 'init' || d.state == 'true' || d.state == 'false'){
+        before_node(d);
+      }
+      if(d.state == 'recommend' || d.state == 'recommend_list'){
+        recommend_node(d);
+      }
     }
 
-    function node_overview(d){
-      var file = "static/" + d.file + ".csv";
+    function current_node(d){
+      var file_name = d.file;
+      var name = d.name;
 
       $.ajax({
-        url: '/node_overview',
+        url: '/current_node',
         type: 'POST',
-        data: file,
-        dataType: "text"
+        data: {'file_name': file_name, 'name': name}
+      }).done(function(){
+        window.location.href = '/';
+      })
+    }
+
+    function before_node(d){
+      var file_name = d.file;
+      var name = d.name;
+      var state = d.state;
+
+      $.ajax({
+        url: '/before_node',
+        type: 'POST',
+        data: {'file_name': file_name, 'name': name, 'state': state}
+      }).done(function(){
+        window.location.href = '/';
+      })
+    }
+
+    function recommend_node(d){
+      var file_name = d.file;
+      var name = d.name;
+      var state = d.state;
+
+      $.ajax({
+        url: '/recommend_node',
+        type: 'POST',
+        data: {'file_name': file_name, 'name': name, 'state': state}
       }).done(function(){
         window.location.href = '/';
       })
     }
   </script>
 
-  <!-- ************** Generate the Vega-Lite ************** -->
+  <!-- ************** Generate the overview ************** -->
+  <script>
+    {{create_overview|safe}}
+  </script>
+
+  <!-- ************** Generate the vega lite ************** -->
   <script>
     {{create_vlSpec|safe}}
-  </script>  
+  </script>
   </body>
 </html>
