--- a/EEG/System/templates/firstRest.html
+++ b/EEG/System/templates/firstRest.html
@@ -1,13 +1,14 @@
 <!DOCTYPE html>
 <html lang="ko">
-<head>
-    <meta charset="UTF-8">
-    <title>rest</title>
-</head>
-<body>
-<h1>First Rest</h1>
-<a href="/visualization">Next</a>
-<link href="../static/css/global.css" rel="stylesheet">
-<link href="../static/css/bootstrap.css" rel="stylesheet">
+    <head>
+        <meta charset="UTF-8">
+        <title>rest</title>
+    </head>
+    <body>
+        <div><h1>First Rest</h1></div>
+        <br>
+        <div><button type="button" onclick="location.href='/visualization'">Next</button></div>
+        <link href="../static/css/global.css" rel="stylesheet">
+        <link href="../static/css/bootstrap.css" rel="stylesheet">
 </body>
 </html>
