--- a/EEG/System/static/css/global.css
+++ b/EEG/System/static/css/global.css
@@ -3,7 +3,10 @@ html{
     height: 100%;
 }
 body{
-    display: flex;
     justify-content: center;
     align-items: center;
+    vertical-align: middle;
+}
+div{
+    width: 100%;
 }
