--- a/EEG/System/templates/visualization.html
+++ b/EEG/System/templates/visualization.html
@@ -1,24 +1,27 @@
 <!DOCTYPE html>
 <html lang="ko">
-<head>
+    <head>
     <meta charset="UTF-8">
-  <script type="text/javascript">
-    function press(f) {
-      if (f.keyCode == 13) {
-        formname.submit(); //formname에 사용자가 지정한 form의 name입력
-      }
-    }
-  </script>
-    <title>Visualization</title>
-</head>
-<body>
-<h1>Visualization</h1>
-<div>{% include 'Chart.html' %}</div>
-<div>{{task}}</div>
-<form method="get" name="formname" action="/answer">
-  <input type="input" id="answer" placeholder="답변" required name="answer" onkeypress="JavaScript:press(this.form)" />
-</form>
-<link href="../static/css/global.css" rel="stylesheet">
-<link href="../static/css/bootstrap.css" rel="stylesheet">
-</body>
+        <script type="text/javascript">
+            function press(f) {
+                if (f.keyCode == 13) {
+                    formname.submit(); //formname에 사용자가 지정한 form의 name입력
+                }
+            }
+        </script>
+        <title>Visualization</title>
+    </head>
+    <body>
+        <div><h1>Visualization</h1></div>
+        <div>{% include 'Chart.html' %}</div>
+        <br>
+        <div>{{task}}</div>
+        <div>
+            <form method="get" name="formname" action="/answer">
+                <input type="input" id="answer" placeholder="답변" required name="answer" onkeypress="JavaScript:press(this.form)" />
+            </form>
+        </div>
+        <link href="../static/css/global.css" rel="stylesheet">
+        <link href="../static/css/bootstrap.css" rel="stylesheet">
+    </body>
 </html>
