--- a/EEG/System/templates/visualization.html
+++ b/EEG/System/templates/visualization.html
@@ -13,7 +13,8 @@
     </head>
     <body>
         <p><h1>Visualization</h1></p>
-        <div>{% include 'Chart.html' %}</div>
+        <div><img src="{{ url_for('static', filename=image) }}"></div>
+        <p>{{task}}</p>
         <br>
         <p>
             <div>
