--- a/EEG/System/templates/firstRest.html
+++ b/EEG/System/templates/firstRest.html
@@ -3,11 +3,24 @@
     <head>
         <meta charset="UTF-8">
         <title>rest</title>
+        <script>
+            window.onload = function button_hide() {
+                document.getElementById("Next").style.display = "none";
+                setTimeout( function button_show() {document.getElementById("Next").style.display = "block";}, 1000*60*3);
+            }
+        </script>
     </head>
     <body>
         <div><h1>First Rest</h1></div>
-        <br>
-        <div><button type="button" onclick="location.href='/visualization'">Next</button></div>
+        <p>
+            3분 후, 아래에 다음으로 넘어가는 버튼이 나타납니다.
+            <br>
+            3분동안 아무런 행동도 하지 않고 휴식해주세요.
+            <br>
+            되도록이면 아무런 생각을 하지 않고 편하게 휴식해주세요.
+            <br>
+        </p>
+        <div id="Next" style="text-align: center"><button type="button" onclick="location.href='/visualization'">Next</button></div>
         <link href="../static/css/global.css" rel="stylesheet">
         <link href="../static/css/bootstrap.css" rel="stylesheet">
 </body>
