--- a/EEG/System/templates/rest.html
+++ b/EEG/System/templates/rest.html
@@ -3,10 +3,27 @@
     <head>
         <meta charset="UTF-8">
         <title>rest</title>
+        <script>
+            window.onload = function button_hide() {
+                document.getElementById("Next").style.display = "none";
+                setTimeout( function button_show() {document.getElementById("Next").style.display = "block";}, 1000*60);
+            }
+        </script>
     </head>
     <body>
         <div><h1>rest</h1></div>
-        <div><button type="button" onclick="location.href='/visualization'">Next</button></div>
+        <div><p>
+            다음 문제를 해결하기 전 짧은 휴식을 갖습니다.
+            <br>
+            1분 후, 아래에 다음으로 넘어가는 버튼이 나타납니다.
+            <br>
+            1분동안 아무런 행동도 하지 않고 휴식해주세요.
+            <br>
+            되도록이면 아무런 생각을 하지 않고 편하게 휴식해주세요.
+            <br>
+            버튼이 보인 후에도 추가적인 휴식을 원한다면 충분한 휴식을 가진 후 다음 문제로 넘어가주세요.
+        </p></div>
+        <div id="Next" style="text-align: center"><button type="button" onclick="location.href='/visualization'">Next</button></div>
     <link href="../static/css/global.css" rel="stylesheet">
     <link href="../static/css/bootstrap.css" rel="stylesheet">
 </body>
