--- a/EEG/System/templates/index.html
+++ b/EEG/System/templates/index.html
@@ -24,18 +24,22 @@
       <br>
       실험은 주어진 시각화를 보고 질문에 대한 답변을 입력하는 방식으로 진행됩니다.<br>
       답변 작성 후 ENTER을 입력하면 다음 페이지로 넘어가며, 한번 넘어간 페이지는 다시 돌아갈 수 없습니다.<br>
+      <br>
+      문제 해결에 어려움을 느끼게 하기 위해 의도적으로 어렵게 표현한 시각화가 존재합니다.<br>
       혹시라도 답을 모르겠을 경우 모르겠다고 입력하셔도 됩니다.<br>
-      휴식 단계에서는 처음 휴식은 3분, 이후 휴식은 1분의 휴식을 가진 후 다음 과제를 수행할 수 있는 버튼이 나타납니다<br>
-      만약 버튼이 보인 후에도 추가적인 휴식을 원한다면 충분한 휴식을 가진 후 다음 문제로 넘어가주세요.<br>
+      <br>
+      휴식 단계에서는 처음 휴식은 1분, 이후 휴식은 30초의 휴식을 가진 후 다음 과제를 수행할 수 있는 버튼이 나타납니다<br>
+      만약 버튼이 나타난 후에도 추가적인 휴식을 원한다면 충분한 휴식을 가진 후 다음 문제로 넘어가주세요.<br>
+      <br>
+      뇌파 데이터의 노이즈를 방지하기 위해 불필요한 말이나 움직임은 지양해 주세요.<br>
       준비 되셨으면 아래의 빈칸에 이름을 입력 후 ENTER을 눌러주세요.<br>
     </p>
   </div>
   <br>
   <div>
-  <div><h1>이름을 입력해주세요</h1></div>
   <br>
     <form method="get" name="formname" action="/search">
-      <input type="input" id="search" placeholder="이름 입력" required name="search" onkeypress="JavaScript:press(this.form)" autocomplete="off"/>
+      <input type="input" id="search" placeholder="이름을 입력해주세요" required name="search" onkeypress="JavaScript:press(this.form)" autocomplete="off"/>
     </form>
   </div>
   <link href="../static/css/global.css" rel="stylesheet">
